fix alignment finally! so that background color works

--- a/stlye.css
+++ b/stlye.css
@@ -14,9 +14,7 @@ body {
 }
 
 .main {
-    width: 100vw;
-    padding: 0 15vw;
-    margin: 0 auto;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -26,11 +24,17 @@ body {
     border: 3px solid red;
 }
 
-.main div {
+.intro,
+.info,
+.quote,
+.sign-in {
     flex: 1;
+    width: 100vw;
+    padding: 0 15vw;
+    margin: 0 auto;
 
-
-    border: 2px solid green;
+   /* background-color: gray;*/
+    border: 2px solid rgb(87, 4, 241);
 }
 
 .intro {
@@ -49,11 +53,6 @@ header {
     color: white;
 }
 
-/* Maybe unecessary? */
-header div,
-header li {
-    padding: 0 10px;
-}
 
 header ul {
     padding: 0;
